# sketchpy

./: .gitignore  README  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: ulam_spiral.py
src/kanvas/: core.py  model.py  view.py
src/sketchpy/: __main__.py  controller.py  core.py  model.py  view.py
