[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sketchpy"
version = "0.1.0"
description = "A minimal p5.js-style creative coding library for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Robin Oscarsson" }]
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.0",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/robinoscarsson/sketchpy"
