[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanvas"
version = "0.1.2"
description = "A minimalist creative-coding toolkit for Python (homage to Processing/p5)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "Robin Oscarsson" }]
license = { text = "MIT" }
dependencies = ["pygame>=2.0", "numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/robinoscarsson/kanvas"
Issues = "https://github.com/robinoscarsson/kanvas/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
